tests/error/union_global_static.gw
#! [contains] can only be used at class scope.
union private U { int i; };
